testsuite/tests/deriving/should_fail/T9600.hs
{-# LANGUAGE Haskell2010 #-}
import Control.Applicative

newtype Foo a = Foo (a -> a) deriving Applicative
