testsuite/tests/deriving/should_fail/T9600.stderr

T9600.hs:4:39: error: [GHC-82023]
    • Can't make a derived instance of ‘Applicative Foo’:
        ‘Applicative’ is not a stock derivable class (Eq, Show, etc.)
    • In the newtype declaration for ‘Foo’
    Suggested fix:
      Perhaps you intended to use the ‘GeneralizedNewtypeDeriving’ extension
      for GHC's newtype-deriving extension
